--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -7,6 +7,7 @@ body{
 }
 
 #main{
+	color: $secondary-blue;
 	background-color: $primary-orange;
 	margin: auto;
 	width: 30%;
@@ -34,5 +35,5 @@ body{
 		list-style: none;
 	}
 
-	
+
 }
