--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -13,6 +13,11 @@ body{
 	width: 30%;
 	padding: 10px;
 	text-align: center;
+	border-radius: 5px;
+
+	a{
+		text-decoration: none;
+	}
 
 	input{
 		border-radius: 5px;
