--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -7,7 +7,10 @@ body {
   margin: auto;
   width: 30%;
   padding: 10px;
-  text-align: center; }
+  text-align: center;
+  border-radius: 5px; }
+  #main a {
+    text-decoration: none; }
   #main input {
     border-radius: 5px;
     border: 1px solid #24324B; }
