--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -20,8 +20,13 @@ body{
 	a{
 		text-decoration: none;
 		color: $accent-gray;
-		padding: 0px 2px;
+		padding: 0px 5px;
+		margin: 0px 2px;
 		float: right;
+		background-color: $secondary-blue;
+		border-radius: 5px;
+		color: white;
+		font-weight: bold;
 	}
 
 	input{
