--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -14,8 +14,13 @@ body {
   #main a {
     text-decoration: none;
     color: #A2A5A3;
-    padding: 0px 2px;
-    float: right; }
+    padding: 0px 5px;
+    margin: 0px 2px;
+    float: right;
+    background-color: #24324B;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold; }
   #main input {
     color: #24324B;
     font-weight: bold;
